<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/updateturnlist_Root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dip"
    android:layout_marginRight="10dip"
    android:minWidth="300dip"
    android:orientation="vertical"
    android:paddingLeft="20dip"
    android:paddingRight="20dip" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/updateturnlist_turnList"
        android:textStyle="bold" >

    </TextView>

    <EditText
        android:id="@+id/updateturnlist_txtTurnList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:inputType="textCapSentences"
        android:text="@string/updateturnlist_defaultTurnList"
        android:visibility="visible" >

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <CheckBox
            android:id="@+id/chkIncludeSBs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/includeSoftButtons" />

        <Button
            android:id="@+id/updateturnlist_btnSoftButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/softButtons" />

    </LinearLayout>

</LinearLayout>